implementing API Key and swager configuration

--- a/API/Dapper.WebAPI/appsettings.json
+++ b/API/Dapper.WebAPI/appsettings.json
@@ -9,5 +9,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=.\\SQLEXPRESS;Database=Contact;Trusted_Connection=True;MultipleActiveResultSets=true;"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ApiKey": "MySecretKey"
+
 }
