--- a/API/Dapper.WebAPI/appsettings.Development.json
+++ b/API/Dapper.WebAPI/appsettings.Development.json
@@ -9,5 +9,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=Contact;Trusted_Connection=True;MultipleActiveResultSets=true;"
+  },
+  "AllowedHosts": "*",
+  "ApiKey": "MySecretKey"
 }
+
